--- a/kustomization/overlays/prod/immich/ingress.yml
+++ b/kustomization/overlays/prod/immich/ingress.yml
@@ -9,7 +9,7 @@ metadata:
   name: lg-ingress
 spec:
   rules:
-    - host: immich.hogs.tswn.us
+    - host: immich.tswn.us
       http:
         paths:
           - backend:
