allow immich server ping to bypass authelia

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -46,6 +46,12 @@ access_control:
         - ^/hacsfiles/iconset.js$
         - ^/service_worker.js$
         - ^/static/.*$
+    - domain: immich.tswn.us
+      networks:
+        - home
+      policy: bypass
+      resources:
+        - ^/api/server-info/ping$
     - domain: jellyfin.tswn.us
       networks:
         - home
