allow immich server-info/features through authelia

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -52,6 +52,7 @@ access_control:
       policy: bypass
       resources:
         - ^/api/server-info/ping$
+        - ^/server-info/features$
     - domain: jellyfin.tswn.us
       networks:
         - home
