allow immich .well-known/immich through authelia

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -51,6 +51,7 @@ access_control:
         - home
       policy: bypass
       resources:
+        - ^/.well-known/immich$
         - ^/api/server-info/ping$
         - ^/server-info/.*$
     - domain: jellyfin.tswn.us
