server-info is old it looks like; api/server-info is what needs to be allowed

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -52,8 +52,7 @@ access_control:
       policy: bypass
       resources:
         - ^/.well-known/immich$
-        - ^/api/server-info/ping$
-        - ^/server-info/.*$
+        - ^/api/server-info/.*$
     - domain: jellyfin.tswn.us
       networks:
         - home
