need to allow api/oauth/authorize as well for immich

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -52,6 +52,7 @@ access_control:
       policy: bypass
       resources:
         - ^/.well-known/immich$
+        - ^/api/oauth/authorize$
         - ^/api/server-info/.*$
     - domain: jellyfin.tswn.us
       networks:
