--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -52,9 +52,7 @@ access_control:
       policy: bypass
       resources:
         - ^/.well-known/immich$
-        - ^/api/oauth/authorize$
-        - ^/api/oauth/callback$
-        - ^/api/server-info/.*$
+        - ^/api/.*$
     - domain: jellyfin.tswn.us
       networks:
         - home
