--- a/kustomization/components/kubevirt-operator/kustomization.yml
+++ b/kustomization/components/kubevirt-operator/kustomization.yml
@@ -5,3 +5,5 @@ kind: Component
 resources:
   # renovate: datasource=github-releases
   - https://github.com/kubevirt/kubevirt/releases/download/v1.2.2/kubevirt-operator.yaml
+  # renovate: datasource=github-releases
+  - https://github.com/kubevirt/kubevirt/releases/download/v1.2.2/kubevirt-cr.yaml
