allow access to cdi-image-upload.hogs.tswn.us from management networks

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -34,6 +34,10 @@ access_control:
         - man
         - 10.117.0.24 # monitor.house.gem.hogs.tswn.us
       policy: bypass
+    - domain: cdi-image-upload.hogs.tswn.us
+      networks:
+        - man
+      policy: bypass
     - domain: homeassistant.hogs.tswn.us
       networks:
         - home
