allow access to cdi-image-upload.hogs.tswn.us from dev machines

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -16,6 +16,9 @@ access_control:
       networks:
         - 172.16.0.0/16
         - 172.17.0.0/16
+    - name: dev
+      networks:
+        - 10.11.0.25 # sdwilsh-dev on cluster network
     - name: home
       networks:
         - 10.117.0.0/23
@@ -36,7 +39,7 @@ access_control:
       policy: bypass
     - domain: cdi-image-upload.hogs.tswn.us
       networks:
-        - man
+        - dev
       policy: bypass
     - domain: homeassistant.hogs.tswn.us
       networks:
