have traefik connect to cdi-image-upload without verifying ssl

--- a/kustomization/overlays/experimental/kubevirt/kustomization.yml
+++ b/kustomization/overlays/experimental/kubevirt/kustomization.yml
@@ -11,5 +11,7 @@ namespace: kubevirt
 resources:
   - kubevirt.yml
   - cdi.yml
-  - ingress.yml
+  - ingressroute.yml
   - networkaddonsconfig.yml
+  - serverstransport.yml
+  - storageclass.yml
