fix multus further by using our own config

--- a/kustomization/components/multus/patches/update_volume_mounts_for_k3s.yml
+++ b/kustomization/components/multus/patches/update_volume_mounts_for_k3s.yml
@@ -6,6 +6,11 @@ metadata:
 spec:
   template:
     spec:
+      containers:
+        - name: kube-multus
+          volumeMounts:
+            - name: cnibin
+              mountPath: /host/opt/cni/bin
       volumes:
         - name: cni
           hostPath:
