--- a/kustomization/overlays/experimental/kubevirt/kustomization.yml
+++ b/kustomization/overlays/experimental/kubevirt/kustomization.yml
@@ -2,12 +2,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+configMapGenerator:
+  - name: multus-configmap
+    files:
+      - configmap/multus/daemon-config.json
 components:
   - ../../../components/kubevirt-cdi-operator
   - ../../../components/kubevirt-cna-operator
   - ../../../components/kubevirt-operator
   - ../../../components/multus
 namespace: kubevirt
+patches:
+  - path: patches/multus/add_config.yml
+    target:
+      kind: DaemonSet
+      name: kube-multus-ds
 resources:
   - kubevirt.yml
   - cdi.yml
