adjust cni bin path to match k3s

--- a/kustomization/components/multus/patches/update_volume_mounts_for_k3s.yml
+++ b/kustomization/components/multus/patches/update_volume_mounts_for_k3s.yml
@@ -10,7 +10,7 @@ spec:
         - name: kube-multus
           volumeMounts:
             - name: cnibin
-              mountPath: /host/opt/cni/bin
+              mountPath: /host/var/lib/rancher/k3s/data/current/bin/
       volumes:
         - name: cni
           hostPath:
