--- a/kustomization/overlays/prod/homeassistant/postgresql.yml
+++ b/kustomization/overlays/prod/homeassistant/postgresql.yml
@@ -4,6 +4,23 @@ kind: postgresql
 metadata:
   name: homeassistant-recorder-pg 
 spec:
+  additionalVolumes:
+    - mountPath: /etc/vector
+      name: vector-config
+      targetContainers:
+        - vector
+      volumeSource:
+        projected:
+          defaultMode: 420
+          sources:
+            - configMap:
+                name: postgresql-vector-metrics-sidecar-config
+    - mountPath: /vector-data-dir
+      name: vector-data
+      targetContainers:
+        - vector
+      volumeSource:
+        emptyDir: {}
   teamId: homeassistant
   volume:
     size: 30Gi
@@ -15,3 +32,17 @@ spec:
   preparedDatabases:
     homeassistant:
       defaultUsers: true
+  sidecars:
+    - args:
+        - --config-dir
+        - /etc/vector/
+      image: timberio/vector:0.39.0-distroless-libc
+      name: vector
+      securityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
+        runAsNonRoot: false
+        seccompProfile:
+          type: RuntimeDefault
