--- a/kustomization/overlays/prod/homeassistant/kustomization.yml
+++ b/kustomization/overlays/prod/homeassistant/kustomization.yml
@@ -21,7 +21,7 @@ configMapGenerator:
       - configmap/vector/vector.yml
   - name: postgresql-vector-metrics-sidecar-config
     files:
-      - configmap/postgresql/vector.yml
+      - configmap/postgresql/vector.yaml
     options:
       disableNameSuffixHash: true
 images:
