add a rule to spot when there are postgresql problems

--- a/kustomization/components/prometheus/kustomization.yml
+++ b/kustomization/components/prometheus/kustomization.yml
@@ -10,5 +10,6 @@ resources:
   - rules/cpu_load.yml
   - rules/disk.yml
   - rules/memory.yml
+  - rules/postgresql.yml
   - rules/vector.yml
   - rules/volume.yml
