--- a/kustomization/overlays/prod/paperless/postgresql.yml
+++ b/kustomization/overlays/prod/paperless/postgresql.yml
@@ -4,6 +4,23 @@ kind: postgresql
 metadata:
   name: paperless-pg 
 spec:
+  additionalVolumes:
+    - mountPath: /etc/vector
+      name: vector-config
+      targetContainers:
+        - vector
+      volumeSource:
+        projected:
+          defaultMode: 420
+          sources:
+            - configMap:
+                name: postgresql-vector-metrics-sidecar-config
+    - mountPath: /vector-data-dir
+      name: vector-data
+      targetContainers:
+        - vector
+      volumeSource:
+        emptyDir: {}
   teamId: paperless
   volume:
     size: 1Gi
@@ -17,3 +34,14 @@ spec:
       defaultUsers: true
       schemas:
         public: {}
+  sidecars:
+    - image: timberio/vector:0.39.0-distroless-libc
+      name: vector
+      securityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
+        runAsNonRoot: false
+        seccompProfile:
+          type: RuntimeDefault
