--- a/kustomization/components/ara/postgresql.yml
+++ b/kustomization/components/ara/postgresql.yml
@@ -3,6 +3,23 @@ kind: postgresql
 metadata:
   name: ara-database-16-pg
 spec:
+  additionalVolumes:
+    - mountPath: /etc/vector
+      name: vector-config
+      targetContainers:
+        - vector
+      volumeSource:
+        projected:
+          defaultMode: 420
+          sources:
+            - configMap:
+                name: postgresql-vector-metrics-sidecar-config
+    - mountPath: /vector-data-dir
+      name: vector-data
+      targetContainers:
+        - vector
+      volumeSource:
+        emptyDir: {}
   teamId: ara
   volume:
     size: 5Gi
@@ -14,3 +31,14 @@ spec:
   preparedDatabases:
     ara:
       defaultUsers: true
+  sidecars:
+    - image: timberio/vector:0.39.0-distroless-libc
+      name: vector
+      securityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
+        runAsNonRoot: false
+        seccompProfile:
+          type: RuntimeDefault
