--- a/kustomization/overlays/prod/paperless/patches/set_paperless_customizations.yml
+++ b/kustomization/overlays/prod/paperless/patches/set_paperless_customizations.yml
@@ -12,19 +12,19 @@ spec:
             - name: PAPERLESS_DBENGINE
               value: postgresql
             - name: PAPERLESS_DBHOST
-              value: paperless-pg
+              value: paperless-16-pg
             - name: PAPERLESS_DBPORT
               value: "5432"
             - name: PAPERLESS_DBUSER
               valueFrom:
                 secretKeyRef:
                   key: username
-                  name: paperless-owner-user.paperless-pg.credentials.postgresql.acid.zalan.do
+                  name: paperless-owner-user.paperless-16-pg.credentials.postgresql.acid.zalan.do
             - name: PAPERLESS_DBPASS
               valueFrom:
                 secretKeyRef:
                   key: password
-                  name: paperless-owner-user.paperless-pg.credentials.postgresql.acid.zalan.do
+                  name: paperless-owner-user.paperless-16-pg.credentials.postgresql.acid.zalan.do
 
             # Features
             - name: PAPERLESS_CONSUMER_ENABLE_BARCODES
