--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -19,9 +19,15 @@ spec:
       app.kubernetes.io/name: vector
   storage:
     volumeClaimTemplate:
+      metadata:
+        labels:
+          # Use this PVC to configure attached PVs.
+          recurring-job.longhorn.io/source: enabled
+          # Opt into the no-backup group since it can easily be recreated.
+          recurring-job-group.longhorn.io/no-backup: enabled
       spec:
         storageClassName: longhorn-encrypted
         resources:
           requests:
-            storage: 40Gi
+            storage: 60Gi
   version: v2.44.0
