--- a/kustomization/overlays/prod/homeassistant/postgresql.yml
+++ b/kustomization/overlays/prod/homeassistant/postgresql.yml
@@ -2,7 +2,7 @@
 apiVersion: acid.zalan.do/v1
 kind: postgresql
 metadata:
-  name: homeassistant-recorder-pg 
+  name: homeassistant-recorder-pg
 spec:
   additionalVolumes:
     - mountPath: /etc/vector
@@ -29,6 +29,53 @@ spec:
   podPriorityClassName: critical-application-infra
   postgresql:
     version: "15"
+  preparedDatabases:
+    homeassistant:
+      defaultUsers: true
+  sidecars:
+    - image: timberio/vector:0.39.0-distroless-libc
+      name: vector
+      securityContext:
+        allowPrivilegeEscalation: false
+        capabilities:
+          drop:
+            - ALL
+        runAsNonRoot: false
+        seccompProfile:
+          type: RuntimeDefault
+---
+apiVersion: acid.zalan.do/v1
+kind: postgresql
+metadata:
+  name: homeassistant-recorder-16-pg
+spec:
+  additionalVolumes:
+    - mountPath: /etc/vector
+      name: vector-config
+      targetContainers:
+        - vector
+      volumeSource:
+        projected:
+          defaultMode: 420
+          sources:
+            - configMap:
+                name: postgresql-vector-metrics-sidecar-config
+    - mountPath: /vector-data-dir
+      name: vector-data
+      targetContainers:
+        - vector
+      volumeSource:
+        emptyDir: {}
+  clone:
+    cluster: homeassistant-recorder-pg
+  teamId: homeassistant
+  volume:
+    size: 50Gi
+    storageClass: longhorn-encrypted-replicated-database
+  numberOfInstances: 3
+  podPriorityClassName: critical-application-infra
+  postgresql:
+    version: "16"
   preparedDatabases:
     homeassistant:
       defaultUsers: true
