do not backup jellyfin-cache

--- a/kustomization/components/jellyfin/statefulset.yml
+++ b/kustomization/components/jellyfin/statefulset.yml
@@ -66,6 +66,11 @@ spec:
       priorityClassName: application
   volumeClaimTemplates:
     - metadata:
+        labels:
+          # Use this PVC to configure attached PVs.
+          recurring-job.longhorn.io/source: enabled
+          # Opt into the no-backup group since it can easily be recreated.
+          recurring-job-group.longhorn.io/no-backup: enabled
         name: jellyfin-cache
       spec:
         accessModes:
