set a retension time on prometheus data

--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -17,6 +17,7 @@ spec:
   serviceMonitorSelector:
     matchLabels:
       app.kubernetes.io/name: vector
+  retention: 12w
   storage:
     volumeClaimTemplate:
       metadata:
