--- a/kustomization/components/prometheus/kustomization.yml
+++ b/kustomization/components/prometheus/kustomization.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
-  - ingress.yml
+  - alertmanager.yml
   - prometheus.yml
   - rbac.yml
   - rules/argocd.yml
