update rule names to have more useful alert titles

--- a/kustomization/components/prometheus/rules/argocd.yml
+++ b/kustomization/components/prometheus/rules/argocd.yml
@@ -9,14 +9,14 @@ spec:
     - name: apps
       interval: 5m
       rules:
-        - alert: unhealthy
+        - alert: argocd-app-unhealthy
           annotations:
             description: "{{ $labels.name }} is reported as unhealthy for more than 5 minutes!"
           expr: count by (name) (argocd_app_info{health_status!="Healthy"}) > 0
           for: 5m
           labels:
             severity: warning
-        - alert: out_of_sync
+        - alert: argocd-app-out-of-sync
           annotations:
             description: "{{ $labels.name }} is reported as out of sync for more than 15 minutes!"
           expr: count by (name) (argocd_app_info{sync_status="OutOfSync"}) > 0
