--- a/kustomization/components/prometheus/rules/postgresql.yml
+++ b/kustomization/components/prometheus/rules/postgresql.yml
@@ -9,14 +9,14 @@ spec:
     - name: patroni.status
       interval: 5m
       rules:
-        - alert: postgres-not-running
+        - alert: postgresql-not-running
           annotations:
             description: "Postgres not running in {{ $labels.name }}!"
           expr: patroni_postgresql_running == 0
           for: 5m
           labels:
             severity: warning
-        - alert: postgres-dead
+        - alert: postgresql-dead
           annotations:
             description: "Postgres not running in {{ $labels.name }}!"
           expr: patroni_postgresql_running == 0
