set kube-vip vip_nodename so it does not guess with full dns name

--- a/kustomization/components/kube-vip/daemonset.yml
+++ b/kustomization/components/kube-vip/daemonset.yml
@@ -90,6 +90,10 @@ spec:
           value: "true"
         - name: vip_leaseduration
           value: "5"
+        - name: vip_nodename
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         - name: vip_renewdeadline
           value: "3"
         - name: vip_retryperiod
