--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -9,6 +9,7 @@ spec:
       - namespace: prometheus
         name: alertmanager-operated
         port: web
+  podMonitorNamespaceSelector: {}
   priorityClassName: application
   retention: 12w
   ruleSelector: {}
