--- a/kustomization/components/prometheus/prometheus.yml
+++ b/kustomization/components/prometheus/prometheus.yml
@@ -10,6 +10,7 @@ spec:
         name: alertmanager-operated
         port: web
   podMonitorNamespaceSelector: {}
+  podMonitorSelector: {}
   priorityClassName: application
   retention: 12w
   ruleSelector: {}
