--- a/kustomization/components/kube-vip/podmonitor.yml
+++ b/kustomization/components/kube-vip/podmonitor.yml
@@ -2,7 +2,24 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: kube-vip-podmonitor
+  name: kube-vip-controlplane-podmonitor
+spec:
+  namespaceSelector:
+    matchNames:
+      - kube-vip
+  podTargetLabels:
+    - app.kubernetes.io/name
+  podMetricsEndpoints:
+    - interval: 15s
+      port: metrics
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: kube-vip-ds
+---
+apiVersion: monitoring.coreos.com/v1
+kind: PodMonitor
+metadata:
+  name: kube-vip-service-podmonitor
 spec:
   namespaceSelector:
     matchNames:
