Migrate to docker_compose_v2 as docker_compose is deprecated

--- a/plays/hosts/monitor.house.gem.hogs.tswn.us.yml
+++ b/plays/hosts/monitor.house.gem.hogs.tswn.us.yml
@@ -4,3 +4,5 @@
   hosts: monitor.house.gem.hogs.tswn.us
   roles:
     - role: docker-brultech-serial2mqtt
+      tags:
+        - brultech-serial2mqtt
