--- a/kustomization/overlays/prod/immich/kustomization.yml
+++ b/kustomization/overlays/prod/immich/kustomization.yml
@@ -4,6 +4,11 @@ kind: Kustomization
 
 components:
   - ../../../components/immich
+images:
+  - name: ghcr.io/immich-app/immich-server
+    newTag: v1.106.4
+  - name: ghcr.io/immich-app/immich-machine-learning
+    newTag: v1.106.4
 namespace: immich
 resources:
   - namespace.yml
