setup management for lg project

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -19,6 +19,7 @@ resources:
   - application/homeassistant.yml
   - application/immich.yml
   - application/kube-vip.yml
+  - application/lg.yml
   - application/longhorn.yml
   - application/paperless.yml
   - application/postgresql.yml
