drop special project for lg

--- a/kustomization/overlays/prod/argo-proj/application/lg.yml
+++ b/kustomization/overlays/prod/argo-proj/application/lg.yml
@@ -5,7 +5,7 @@ metadata:
   name: lg
   namespace: argocd
 spec:
-  project: lg
+  project: default
   destination:
     server: https://kubernetes.default.svc
     namespace: lg 
