--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -224,6 +224,7 @@ bind_zones:
           - jellyfin
           - lg-git
           - longhorn.hogs
+          - manyfold.hogs
           - mqtt.hogs
           - nas.hogs
           - navidrome
