set /tmp to +t to allow uploads

--- a/kustomization/overlays/prod/manyfold/kustomization.yml
+++ b/kustomization/overlays/prod/manyfold/kustomization.yml
@@ -5,6 +5,8 @@ kind: Kustomization
 components:
   - ../../../components/manyfold
 images:
+  - name: busybox
+    newTag: 1.36.1
   - name: ghcr.io/manyfold3d/manyfold-solo
     newTag: 0.74.2
 namespace: manyfold
