--- a/kustomization/components/manyfold/statefulset.yml
+++ b/kustomization/components/manyfold/statefulset.yml
@@ -62,6 +62,24 @@ spec:
               name: manyfold-app-log
             - mountPath: /usr/src/app/tmp
               name: manyfold-app-tmp
+      initContainers:
+        - command:
+            - chmod
+            - +t
+            - /tmp
+          image: busybox
+          name: chmod-tmp
+          resources:
+            limits:
+              cpu: 100m
+              memory: 200Mi
+          securityContext:
+            allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
+          volumeMounts:
+            - mountPath: /tmp
+              name: manyfold-tmp
       priorityClassName: application
       securityContext:
         fsGroup: 65534
