add penpot to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -223,6 +223,7 @@ bind_zones:
           - immich
           - jellyfin
           - lg-git
+          - lg-penpot
           - longhorn.hogs
           - manyfold.hogs
           - mqtt.hogs
